(FIX) - Visibility skill name front

--- a/src/styles/scss/skills.scss
+++ b/src/styles/scss/skills.scss
@@ -133,9 +133,6 @@
 
 .skill-name {
   position: fixed;
-
-  backface-visibility: hidden;
-
   left: 2px;
   top: -25px;
   font-family: var(--font-2);
@@ -565,6 +562,21 @@
     top: 10vh !important;
   }
 
+  .skill.flip .skill-front {
+    /* Stelle sicher, dass die Vorderseite der Karte sichtbar ist, wenn die Karte umgedreht wird */
+    transform: rotateY(0deg);
+  }
+
+  .skill.flip .skill-back {
+    /* Stelle sicher, dass die Rückseite der Karte unsichtbar ist, wenn die Karte umgedreht wird */
+    transform: rotateY(180deg);
+  }
+
+  .skill.flip .skill-name {
+    /* Stelle sicher, dass der Name der Fähigkeit auf der Vorderseite sichtbar ist, wenn die Karte umgedreht wird */
+    display: block;
+  }
+
   .skill.flip .skill-content {
     padding: 0;
     max-width: 92vw !important;
@@ -573,9 +585,6 @@
   }
 
   .skill-back .skill-name {
-
-    backface-visibility: hidden;
-
     outline: 2px solid var(--color-1);
     top: -40px;
     left: 12px;
